Coverity analysis defect 153222: Data race condition

XMLWordPrintableJSON

    • Server Programmability
    • Fully Compatible
    • ALL
    • Programmability 2025-09-01
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /src/mongo/util/background.cpp:333: MISSING_LOCK 153222 Accessing "this->_shutdownRequested" without holding lock "mongo::<unnamed>::PeriodicTaskRunner._mutex". Elsewhere, "mongo::<unnamed>::PeriodicTaskRunner._shutdownRequested" is written to with "PeriodicTaskRunner._mutex" held 1 out of 1 times (1 of these accesses strongly imply that it is necessary).

            Assignee:
            Ronald Steinke
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: