SERVER-109396 Purge unused function (#40434)

GitOrigin-RevId: 1e09e1b49710f43e878bd97aaba974ab7de90c1f